// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewards Widget when there are no rewards displays no rewards dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-5"
      >
        <span
          class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
        >
          <img
            alt="rewards icon"
            src="/assets/icons/rewards-spark.svg"
          />
        </span>
        <div
          class="MuiBox-root-38 MuiBox-root-39"
        >
          <p
            class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
          >
            $0
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-89"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-72"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-101"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-75 MuiDialog-scrollPaper-73"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-103 MuiDialog-paper-76 MuiDialog-paperScrollPaper-77 MuiDialog-paperWidthSm-81 makeStyles-smallDialog-71 MuiDialog-paperFullWidth-85 MuiPaper-elevation24-130 MuiPaper-rounded-104"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-131"
        >
          <h6
            class="MuiTypography-root-40 makeStyles-titleText-132 MuiTypography-h6-50"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-33 MuiIconButton-root-155 makeStyles-closeButton-138"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-163"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-89"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-133"
        >
          <div
            class="MuiGrid-root-175 makeStyles-contentGrid-150 MuiGrid-container-176 MuiGrid-spacing-xs-8-205"
          >
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-4-227"
            >
              <div
                class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
              >
                <div
                  class="makeStyles-noRewardsAmount-149"
                >
                  <img
                    alt="rewards icon"
                    class="makeStyles-rewardsIcon-148"
                    src="/assets/icons/rewards-gift.svg"
                  />
                  <div
                    class="MuiBox-root-38 MuiBox-root-280"
                  >
                    <h6
                      class="MuiTypography-root-40 makeStyles-titleText-132 MuiTypography-h6-50"
                    >
                      $0.00
                    </h6>
                  </div>
                </div>
                <p
                  class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                >
                  No rewards available.
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-8-231"
            >
              <div
                class="MuiGrid-root-175 makeStyles-moreRewardsSection-140"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-moreRewardsInformation-141 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                >
                  <div
                    class="MuiGrid-root-175 MuiGrid-item-177"
                  >
                    <h6
                      class="MuiTypography-root-40 makeStyles-titleText-132 MuiTypography-h6-50"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-moreRewardsDescription-142 MuiGrid-item-177"
                  >
                    <p
                      class="MuiTypography-root-40 MuiTypography-body2-41"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-rewardsGuideLinkContainer-144 MuiGrid-item-177"
                  >
                    <a
                      class="MuiTypography-root-40 MuiLink-root-281 MuiLink-underlineHover-283 makeStyles-rewardsGuide-145 MuiTypography-colorPrimary-63"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-boostRewards-143 MuiGrid-item-177"
                  >
                    <button
                      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-27"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-5"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-89"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are no rewards displays zero amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-5"
    >
      <span
        class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
      >
        <img
          alt="rewards icon"
          src="/assets/icons/rewards-spark.svg"
        />
      </span>
      <div
        class="MuiBox-root-38 MuiBox-root-39"
      >
        <p
          class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
        >
          $0
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-89"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards can display user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-5"
      >
        <span
          class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
        >
          <img
            alt="rewards icon"
            src="/assets/icons/rewards-spark.svg"
          />
        </span>
        <div
          class="MuiBox-root-38 MuiBox-root-39"
        >
          <p
            class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-89"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-72"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-101"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-75 MuiDialog-scrollPaper-73"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Rewards User Guide"
        aria-labelledby="user-guide"
        class="MuiPaper-root-103 MuiDialog-paper-76 MuiDialog-paperScrollPaper-77 MuiDialog-paperWidthSm-81 makeStyles-smallDialog-71 MuiDialog-paperFullWidth-85 MuiPaper-elevation24-130 MuiPaper-rounded-104"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-324"
        >
          <div
            class="MuiBox-root-38 MuiBox-root-334"
          >
            <button
              aria-label="exit guide mode"
              class="MuiButtonBase-root-33 MuiIconButton-root-155 makeStyles-arrowBack-326"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164 MuiSvgIcon-fontSizeInherit-170"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-89"
              />
            </button>
            <h6
              class="MuiTypography-root-40 makeStyles-boldWeight-330 MuiTypography-h6-50"
            >
              Rewards User Guide
            </h6>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-325"
        >
          <div
            class="MuiGrid-root-175 MuiGrid-container-176"
          >
            <div
              class="MuiGrid-root-175 MuiGrid-item-177"
            >
              <ul
                class="makeStyles-rewardsOptions-329"
              >
                <li>
                  <p
                    class="MuiTypography-root-40 MuiTypography-body2-41"
                  >
                    Staking 50% non native tokens
                  </p>
                </li>
                <li>
                  <p
                    class="MuiTypography-root-40 MuiTypography-body2-41"
                  >
                    Holding and/or Staking 50% BadgerDAO tokens
                  </p>
                </li>
              </ul>
            </div>
            <div
              class="MuiGrid-root-175 makeStyles-tokensSection-332 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-179 MuiGrid-grid-xs-12-221"
            >
              <div
                class="MuiGrid-root-175 MuiGrid-item-177"
              >
                <h6
                  class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                >
                  Badger has 3 types of tokens:
                </h6>
              </div>
              <div
                class="MuiGrid-root-175 makeStyles-userGuideTokens-327 MuiGrid-container-176 MuiGrid-spacing-xs-4-201"
              >
                <div
                  class="MuiGrid-root-175 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-userGuideToken-328 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-item-177"
                    >
                      <p
                        class="MuiTypography-root-40 makeStyles-tokenName-331 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                      >
                        BADGERDAO TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-175 MuiGrid-item-177"
                    >
                      <h6
                        class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                      >
                        Badger, Digg
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-reverse-180 MuiGrid-grid-xs-true-209"
                    >
                      <button
                        aria-label="view badger dao tokens"
                        class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-text-6 makeStyles-viewVaultsButton-333 MuiButton-textPrimary-7 MuiButton-textSizeSmall-19 MuiButton-sizeSmall-25"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-5"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-164 MuiSvgIcon-colorPrimary-165"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-89"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-userGuideToken-328 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-179"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-item-177"
                    >
                      <p
                        class="MuiTypography-root-40 makeStyles-tokenName-331 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                      >
                        BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-175 MuiGrid-item-177"
                    >
                      <h6
                        class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                      >
                        Test Token
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-reverse-180 MuiGrid-grid-xs-true-209"
                    >
                      <button
                        aria-label="view boosted tokens"
                        class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-text-6 makeStyles-viewVaultsButton-333 MuiButton-textPrimary-7 MuiButton-textSizeSmall-19 MuiButton-sizeSmall-25"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-5"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-164 MuiSvgIcon-colorPrimary-165"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-89"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-userGuideToken-328 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-179"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-item-177"
                    >
                      <p
                        class="MuiTypography-root-40 makeStyles-tokenName-331 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                      >
                        NON-BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-175 MuiGrid-item-177"
                    >
                      <h6
                        class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                      >
                        All other tokens (e.g. 
                        Test Token
                        ...)
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-direction-xs-column-reverse-180 MuiGrid-grid-xs-true-209"
                    >
                      <button
                        aria-label="view non-boosted tokens"
                        class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-text-6 makeStyles-viewVaultsButton-333 MuiButton-textPrimary-7 MuiButton-textSizeSmall-19 MuiButton-sizeSmall-25"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-5"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-164 MuiSvgIcon-colorPrimary-165"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-40 MuiTypography-subtitle2-52"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-89"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards can go back from user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-5"
      >
        <span
          class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
        >
          <img
            alt="rewards icon"
            src="/assets/icons/rewards-spark.svg"
          />
        </span>
        <div
          class="MuiBox-root-38 MuiBox-root-39"
        >
          <p
            class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-89"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-72"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-101"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-75 MuiDialog-scrollPaper-73"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-103 MuiDialog-paper-76 MuiDialog-paperScrollPaper-77 MuiDialog-paperWidthSm-81 makeStyles-bigDialog-70 MuiDialog-paperFullWidth-85 MuiPaper-elevation24-130 MuiPaper-rounded-104"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-335"
        >
          <h6
            class="MuiTypography-root-40 makeStyles-titleText-336 MuiTypography-h6-50"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-33 MuiIconButton-root-155 makeStyles-closeButton-342"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-163"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-89"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-337"
        >
          <div
            class="MuiGrid-root-175 makeStyles-contentGrid-354 MuiGrid-container-176 MuiGrid-spacing-xs-8-205"
          >
            <div
              class="MuiGrid-root-175 makeStyles-checkboxesSpacing-355 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 makeStyles-contentPadding-356 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-optionsContainer-357 MuiGrid-container-176 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-343 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-360"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-33 MuiIconButton-root-155 PrivateSwitchBase-root-372 MuiCheckbox-root-366 MuiCheckbox-colorPrimary-370 PrivateSwitchBase-checked-373 MuiCheckbox-checked-367 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-375"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-89"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-40 MuiFormControlLabel-label-365 MuiTypography-body1-42"
                        >
                          <p
                            class="MuiTypography-root-40 MuiTypography-body2-41"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-38 MuiBox-root-376"
                      >
                        <h6
                          class="MuiTypography-root-40 makeStyles-boldWeight-359 MuiTypography-h6-50"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-358"
                        >
                          <div
                            class="MuiBox-root-38 MuiBox-root-379"
                          >
                            <p
                              class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-343 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-360"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-33 MuiIconButton-root-155 PrivateSwitchBase-root-372 MuiCheckbox-root-366 MuiCheckbox-colorPrimary-370 PrivateSwitchBase-checked-373 MuiCheckbox-checked-367 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-375"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-89"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-40 MuiFormControlLabel-label-365 MuiTypography-body1-42"
                        >
                          <p
                            class="MuiTypography-root-40 MuiTypography-body2-41"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-38 MuiBox-root-380"
                      >
                        <h6
                          class="MuiTypography-root-40 makeStyles-boldWeight-359 MuiTypography-h6-50"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-358"
                        >
                          <div
                            class="MuiBox-root-38 MuiBox-root-383"
                          >
                            <p
                              class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-343 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-360"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-33 MuiIconButton-root-155 PrivateSwitchBase-root-372 MuiCheckbox-root-366 MuiCheckbox-colorPrimary-370 PrivateSwitchBase-checked-373 MuiCheckbox-checked-367 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-375"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-89"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-40 MuiFormControlLabel-label-365 MuiTypography-body1-42"
                        >
                          <p
                            class="MuiTypography-root-40 MuiTypography-body2-41"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-38 MuiBox-root-384"
                      >
                        <h6
                          class="MuiTypography-root-40 makeStyles-boldWeight-359 MuiTypography-h6-50"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-358"
                        >
                          <div
                            class="MuiBox-root-38 MuiBox-root-387"
                          >
                            <p
                              class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-388 makeStyles-divider-351"
                />
                <div
                  class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-align-items-xs-center-184 MuiGrid-justify-content-xs-space-between-195"
                >
                  <p
                    class="MuiTypography-root-40 MuiTypography-body2-41"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-38 MuiBox-root-397"
                  >
                    <h6
                      class="MuiTypography-root-40 makeStyles-titleText-336 MuiTypography-h6-50"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 makeStyles-submitButton-350 MuiGrid-item-177"
                >
                  <button
                    class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-27"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-5"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-89"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 makeStyles-moreRewardsSection-344"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-moreRewardsInformation-345 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                >
                  <div
                    class="MuiGrid-root-175 MuiGrid-item-177"
                  >
                    <h6
                      class="MuiTypography-root-40 makeStyles-titleText-336 MuiTypography-h6-50"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-moreRewardsDescription-346 MuiGrid-item-177"
                  >
                    <p
                      class="MuiTypography-root-40 MuiTypography-body2-41"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-rewardsGuideLinkContainer-348 MuiGrid-item-177"
                  >
                    <a
                      class="MuiTypography-root-40 MuiLink-root-398 MuiLink-underlineHover-400 makeStyles-rewardsGuide-349 MuiTypography-colorPrimary-63"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-boostRewards-347 MuiGrid-item-177"
                  >
                    <button
                      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-27"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-5"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-89"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays claim options 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-5"
      >
        <span
          class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
        >
          <img
            alt="rewards icon"
            src="/assets/icons/rewards-spark.svg"
          />
        </span>
        <div
          class="MuiBox-root-38 MuiBox-root-39"
        >
          <p
            class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-89"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-72"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-101"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-75 MuiDialog-scrollPaper-73"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-103 MuiDialog-paper-76 MuiDialog-paperScrollPaper-77 MuiDialog-paperWidthSm-81 makeStyles-bigDialog-70 MuiDialog-paperFullWidth-85 MuiPaper-elevation24-130 MuiPaper-rounded-104"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-154 makeStyles-title-131"
        >
          <h6
            class="MuiTypography-root-40 makeStyles-titleText-132 MuiTypography-h6-50"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-33 MuiIconButton-root-155 makeStyles-closeButton-138"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-163"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-89"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-173 makeStyles-content-133"
        >
          <div
            class="MuiGrid-root-175 makeStyles-contentGrid-150 MuiGrid-container-176 MuiGrid-spacing-xs-8-205"
          >
            <div
              class="MuiGrid-root-175 makeStyles-checkboxesSpacing-151 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 makeStyles-contentPadding-152 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-optionsContainer-153 MuiGrid-container-176 MuiGrid-item-177"
                >
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-139 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-280"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-33 MuiIconButton-root-155 PrivateSwitchBase-root-292 MuiCheckbox-root-286 MuiCheckbox-colorPrimary-290 PrivateSwitchBase-checked-293 MuiCheckbox-checked-287 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-295"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-89"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-40 MuiFormControlLabel-label-285 MuiTypography-body1-42"
                        >
                          <p
                            class="MuiTypography-root-40 MuiTypography-body2-41"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-38 MuiBox-root-296"
                      >
                        <h6
                          class="MuiTypography-root-40 makeStyles-boldWeight-279 MuiTypography-h6-50"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-278"
                        >
                          <div
                            class="MuiBox-root-38 MuiBox-root-299"
                          >
                            <p
                              class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-139 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-280"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-33 MuiIconButton-root-155 PrivateSwitchBase-root-292 MuiCheckbox-root-286 MuiCheckbox-colorPrimary-290 PrivateSwitchBase-checked-293 MuiCheckbox-checked-287 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-295"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-89"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-40 MuiFormControlLabel-label-285 MuiTypography-body1-42"
                        >
                          <p
                            class="MuiTypography-root-40 MuiTypography-body2-41"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-38 MuiBox-root-300"
                      >
                        <h6
                          class="MuiTypography-root-40 makeStyles-boldWeight-279 MuiTypography-h6-50"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-278"
                        >
                          <div
                            class="MuiBox-root-38 MuiBox-root-303"
                          >
                            <p
                              class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-claimRow-139 MuiGrid-item-177"
                  >
                    <div
                      class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-justify-content-xs-space-between-195"
                    >
                      <label
                        class="MuiFormControlLabel-root-280"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-33 MuiIconButton-root-155 PrivateSwitchBase-root-292 MuiCheckbox-root-286 MuiCheckbox-colorPrimary-290 PrivateSwitchBase-checked-293 MuiCheckbox-checked-287 MuiIconButton-colorPrimary-159"
                        >
                          <span
                            class="MuiIconButton-label-163"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-295"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-164"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-89"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-40 MuiFormControlLabel-label-285 MuiTypography-body1-42"
                        >
                          <p
                            class="MuiTypography-root-40 MuiTypography-body2-41"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-38 MuiBox-root-304"
                      >
                        <h6
                          class="MuiTypography-root-40 makeStyles-boldWeight-279 MuiTypography-h6-50"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-278"
                        >
                          <div
                            class="MuiBox-root-38 MuiBox-root-307"
                          >
                            <p
                              class="MuiTypography-root-40 MuiTypography-body2-41 MuiTypography-colorTextSecondary-66"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-308 makeStyles-divider-147"
                />
                <div
                  class="MuiGrid-root-175 MuiGrid-container-176 MuiGrid-item-177 MuiGrid-align-items-xs-center-184 MuiGrid-justify-content-xs-space-between-195"
                >
                  <p
                    class="MuiTypography-root-40 MuiTypography-body2-41"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-38 MuiBox-root-317"
                  >
                    <h6
                      class="MuiTypography-root-40 makeStyles-titleText-132 MuiTypography-h6-50"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-175 makeStyles-submitButton-146 MuiGrid-item-177"
                >
                  <button
                    class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-27"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-5"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-89"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-175 MuiGrid-item-177 MuiGrid-grid-xs-12-221 MuiGrid-grid-sm-6-229"
            >
              <div
                class="MuiGrid-root-175 makeStyles-moreRewardsSection-140"
              >
                <div
                  class="MuiGrid-root-175 makeStyles-moreRewardsInformation-141 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
                >
                  <div
                    class="MuiGrid-root-175 MuiGrid-item-177"
                  >
                    <h6
                      class="MuiTypography-root-40 makeStyles-titleText-132 MuiTypography-h6-50"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-moreRewardsDescription-142 MuiGrid-item-177"
                  >
                    <p
                      class="MuiTypography-root-40 MuiTypography-body2-41"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-rewardsGuideLinkContainer-144 MuiGrid-item-177"
                  >
                    <a
                      class="MuiTypography-root-40 MuiLink-root-318 MuiLink-underlineHover-320 makeStyles-rewardsGuide-145 MuiTypography-colorPrimary-63"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-175 makeStyles-boostRewards-143 MuiGrid-item-177"
                  >
                    <button
                      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-27"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-5"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-89"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays rewards amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-5"
    >
      <span
        class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
      >
        <img
          alt="rewards icon"
          src="/assets/icons/rewards-spark.svg"
        />
      </span>
      <div
        class="MuiBox-root-38 MuiBox-root-39"
      >
        <p
          class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
        >
          $12.92
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-89"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards displays success dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-outlined-9 MuiButton-outlinedPrimary-10"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-5"
      >
        <span
          class="MuiButton-startIcon-28 MuiButton-iconSizeMedium-31"
        >
          <img
            alt="rewards icon"
            src="/assets/icons/rewards-spark.svg"
          />
        </span>
        <div
          class="MuiBox-root-38 MuiBox-root-39"
        >
          <p
            class="MuiTypography-root-40 makeStyles-label-2 MuiTypography-body2-41"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-89"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-72"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-101"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-75 MuiDialog-scrollPaper-73"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claimed Rewards Overview"
        aria-labelledby="claimed-rewards"
        class="MuiPaper-root-103 MuiDialog-paper-76 MuiDialog-paperScrollPaper-77 MuiDialog-paperWidthSm-81 makeStyles-smallDialog-71 MuiDialog-paperFullWidth-85 MuiPaper-elevation24-130 MuiPaper-rounded-104"
        role="dialog"
      >
        <div
          class="MuiDialogContent-root-173 makeStyles-content-325"
        >
          <div
            class="MuiGrid-root-175 makeStyles-centeredText-331 MuiGrid-container-176 MuiGrid-direction-xs-column-179"
          >
            <button
              class="MuiButtonBase-root-33 MuiIconButton-root-155 makeStyles-closeButton-333"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-89"
              />
            </button>
            <div
              class="MuiGrid-root-175 makeStyles-successIconContainer-328 MuiGrid-item-177"
            >
              <img
                alt="rewards success icon"
                src="/assets/icons/rewards-claim-success.svg"
              />
            </div>
            <h4
              class="MuiTypography-root-40 makeStyles-rewardsTitle-329 MuiTypography-h4-48"
            >
              Rewards Claimed
            </h4>
            <h6
              class="MuiTypography-root-40 MuiTypography-subtitle2-52"
            >
              Rewards claimed for tokens:
            </h6>
            <h6
              class="MuiTypography-root-40 MuiTypography-subtitle2-52"
            >
              BADGER
            </h6>
            <h6
              class="MuiTypography-root-40 MuiTypography-subtitle2-52"
            >
              bveCVX
            </h6>
            <h6
              class="MuiTypography-root-40 MuiTypography-subtitle2-52"
            >
              bCVXCRV
            </h6>
            <button
              class="MuiButtonBase-root-33 MuiButton-root-4 MuiButton-contained-12 makeStyles-goBackButton-332 MuiButton-containedPrimary-13"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-5"
              >
                Go Back To My Rewards
              </span>
              <span
                class="MuiTouchRipple-root-89"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
